<?xml version="1.0" encoding="utf-8"?>
<!--Nelson Hong Le - 301064831 - COMP 304 SEC401-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/HeadingTextView"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/light_blue"
        android:padding="16dp"
        android:text="@string/brain_challenge"
        android:textColor="#757575"
        android:textSize="24sp"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_types_of_exercises"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <!-- Checkboxes for exercise selection -->
    <CheckBox
        android:id="@+id/exerciseCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/exercise_1" />

    <CheckBox
        android:id="@+id/exerciseCheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/exercise_2" />

    <CheckBox
        android:id="@+id/exerciseCheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/exercise_3" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

</LinearLayout>
